crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@attempt_child.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 31
expression: engine
input_file: crates/barnum_engine/tests/advance/attempt_child.json
---
Engine {
    flat_config: FlatConfig {
        entries: [
            Action(
                Attempt {
                    child: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                    step_config_schema: None,
                    value_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: {
        0: Frame {
            parent: None,
            kind: Attempt,
        },
    },
    pending_dispatches: [
        Dispatch {
            handler_id: HandlerId(
                0,
            ),
            value: String("test_input"),
        },
    ],
}
