crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@attempt_wrapping_parallel.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: engine
input_file: crates/barnum_engine/tests/advance/attempt_wrapping_parallel.json
---
Engine {
    flat_config: FlatConfig {
        entries: [
            Action(
                Attempt {
                    child: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Parallel {
                    count: Count(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    step_config_schema: None,
                    value_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    step_config_schema: None,
                    value_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: {
        0: Frame {
            parent: None,
            kind: Attempt,
        },
        1: Frame {
            parent: Some(
                SingleChild {
                    frame_id: FrameId(
                        0,
                    ),
                },
            ),
            kind: Parallel {
                results: [
                    None,
                    None,
                ],
            },
        },
    },
    task_to_parent: {
        TaskId(
            0,
        ): Some(
            IndexedChild {
                frame_id: FrameId(
                    1,
                ),
                child_index: 0,
            },
        ),
        TaskId(
            1,
        ): Some(
            IndexedChild {
                frame_id: FrameId(
                    1,
                ),
                child_index: 1,
            },
        ),
    },
    pending_dispatches: [
        Dispatch {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                0,
            ),
            value: String("shared"),
        },
        Dispatch {
            task_id: TaskId(
                1,
            ),
            handler_id: HandlerId(
                1,
            ),
            value: String("shared"),
        },
    ],
    next_task_id: 2,
}
