crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@branch_matching.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 32
expression: engine
input_file: crates/barnum_engine/tests/advance/branch_matching.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Branch {
                    count: Count(
                        2,
                    ),
                },
            ),
            BranchKey {
                key: KindDiscriminator(
                    "Err",
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            BranchKey {
                key: KindDiscriminator(
                    "Ok",
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./err.ts",
                    ),
                    func: FuncName(
                        "handle",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./ok.ts",
                    ),
                    func: FuncName(
                        "handle",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [],
        len: 0,
        first_free: None,
    },
    task_to_parent: {
        TaskId(
            0,
        ): None,
    },
    pending_dispatches: [
        Dispatch {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                0,
            ),
            value: Object {
                "error": String("something failed"),
                "kind": String("Err"),
            },
        },
    ],
    next_task_id: 1,
}
