crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@chain_then_branch.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: engine
input_file: crates/barnum_engine/tests/advance/chain_then_branch.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
            Action(
                Branch {
                    count: Count(
                        2,
                    ),
                },
            ),
            BranchKey {
                key: KindDiscriminator(
                    "A",
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            BranchKey {
                key: KindDiscriminator(
                    "B",
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handle_a.ts",
                    ),
                    func: FuncName(
                        "handle",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handle_b.ts",
                    ),
                    func: FuncName(
                        "handle",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./classify.ts",
                    ),
                    func: FuncName(
                        "classify",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Chain {
                            rest: ActionId(
                                2,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 1,
        first_free: None,
    },
    task_to_parent: {
        TaskId(
            0,
        ): Some(
            Chain {
                frame_id: Index {
                    slot: 0,
                    generation: Generation(1),
                },
            },
        ),
    },
    pending_dispatches: [
        Dispatch {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                2,
            ),
            value: String("raw"),
        },
    ],
    stashed_items: [],
    next_task_id: 1,
}
