crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@deep_chain.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 33
expression: engine
input_file: crates/barnum_engine/tests/advance/deep_chain.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Chain {
                    rest: ActionId(
                        2,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        4,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Chain {
                            rest: ActionId(
                                2,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            Chain {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 2,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 1,
            generation: Generation(1),
        },
    },
    pending_dispatches: [
        DispatchEvent {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                0,
            ),
            value: Null,
        },
    ],
    next_task_id: 1,
}
