crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@foreach_array.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: engine
input_file: crates/barnum_engine/tests/advance/foreach_array.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                ForEach {
                    body: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: ForEach {
                            results: [
                                None,
                                None,
                                None,
                            ],
                        },
                    },
                },
            ),
        ],
        len: 1,
        first_free: None,
    },
    task_to_parent: {
        TaskId(
            0,
        ): Some(
            IndexedChild {
                frame_id: Index {
                    slot: 0,
                    generation: Generation(1),
                },
                child_index: 0,
            },
        ),
        TaskId(
            1,
        ): Some(
            IndexedChild {
                frame_id: Index {
                    slot: 0,
                    generation: Generation(1),
                },
                child_index: 1,
            },
        ),
        TaskId(
            2,
        ): Some(
            IndexedChild {
                frame_id: Index {
                    slot: 0,
                    generation: Generation(1),
                },
                child_index: 2,
            },
        ),
    },
    pending_dispatches: [
        Dispatch {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                0,
            ),
            value: Number(10),
        },
        Dispatch {
            task_id: TaskId(
                1,
            ),
            handler_id: HandlerId(
                0,
            ),
            value: Number(20),
        },
        Dispatch {
            task_id: TaskId(
                2,
            ),
            handler_id: HandlerId(
                0,
            ),
            value: Number(30),
        },
    ],
    next_task_id: 3,
}
