crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@foreach_empty.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: engine
input_file: crates/barnum_engine/tests/advance/foreach_empty.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                ForEach {
                    body: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [],
        len: 0,
        first_free: None,
    },
    task_to_frame: {},
    pending_effects: [],
    next_task_id: 0,
}
