crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@foreach_with_chain_body.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: engine
input_file: crates/barnum_engine/tests/advance/foreach_with_chain_body.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                ForEach {
                    body: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        3,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./validate.ts",
                    ),
                    func: FuncName(
                        "validate",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./process.ts",
                    ),
                    func: FuncName(
                        "process",
                    ),
                    input_schema: None,
                    output_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: ForEach {
                            results: [
                                None,
                                None,
                            ],
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            ForEach {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 0,
                            },
                        ),
                        kind: Chain {
                            rest: ActionId(
                                3,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            Chain {
                                frame_id: Index {
                                    slot: 1,
                                    generation: Generation(1),
                                },
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            ForEach {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 1,
                            },
                        ),
                        kind: Chain {
                            rest: ActionId(
                                3,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            Chain {
                                frame_id: Index {
                                    slot: 3,
                                    generation: Generation(1),
                                },
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 5,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 2,
            generation: Generation(1),
        },
        TaskId(
            1,
        ): Index {
            slot: 4,
            generation: Generation(1),
        },
    },
    pending_effects: [
        (
            Index {
                slot: 2,
                generation: Generation(1),
            },
            Dispatch(
                DispatchEvent {
                    task_id: TaskId(
                        0,
                    ),
                    handler_id: HandlerId(
                        0,
                    ),
                    value: String("item1"),
                },
            ),
        ),
        (
            Index {
                slot: 4,
                generation: Generation(1),
            },
            Dispatch(
                DispatchEvent {
                    task_id: TaskId(
                        1,
                    ),
                    handler_id: HandlerId(
                        0,
                    ),
                    value: String("item2"),
                },
            ),
        ),
    ],
    next_task_id: 2,
    terminal_value: None,
}
