crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@loop_body.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
assertion_line: 31
expression: engine
input_file: crates/barnum_engine/tests/advance/loop_body.json
---
Engine {
    flat_config: FlatConfig {
        entries: [
            Action(
                Loop {
                    body: ActionId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "run",
                    ),
                    step_config_schema: None,
                    value_schema: None,
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: {
        0: Frame {
            parent: None,
            kind: Loop {
                body: ActionId(
                    1,
                ),
            },
        },
        1: Frame {
            parent: Some(
                SingleChild {
                    frame_id: FrameId(
                        0,
                    ),
                },
            ),
            kind: Invoke,
        },
    },
    pending_dispatches: [
        Dispatch {
            handler_id: HandlerId(
                0,
            ),
            value: Number(0),
        },
    ],
}
