crates/barnum_engine/tests/snapshots/engine_snapshot_tests__advance_snapshots@nested_chain_in_parallel.json.snap
---
source: crates/barnum_engine/tests/engine_snapshot_tests.rs
expression: engine
input_file: crates/barnum_engine/tests/advance/nested_chain_in_parallel.json
---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                All {
                    count: Count(
                        2,
                    ),
                },
            ),
            ChildRef {
                action: ActionId(
                    3,
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        2,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        5,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./a.ts",
                    ),
                    func: FuncName(
                        "a",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./c.ts",
                    ),
                    func: FuncName(
                        "c",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: All {
                            results: [
                                None,
                                None,
                            ],
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            IndexedChild {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                child_index: 0,
                            },
                        ),
                        kind: Chain {
                            rest: ActionId(
                                5,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 2,
        first_free: None,
    },
    task_to_parent: {
        TaskId(
            0,
        ): Some(
            SingleChild {
                frame_id: Index {
                    slot: 1,
                    generation: Generation(1),
                },
            },
        ),
        TaskId(
            1,
        ): Some(
            IndexedChild {
                frame_id: Index {
                    slot: 0,
                    generation: Generation(1),
                },
                child_index: 1,
            },
        ),
    },
    pending_dispatches: [
        Dispatch {
            task_id: TaskId(
                0,
            ),
            handler_id: HandlerId(
                1,
            ),
            value: Null,
        },
        Dispatch {
            task_id: TaskId(
                1,
            ),
            handler_id: HandlerId(
                2,
            ),
            value: Null,
        },
    ],
    next_task_id: 2,
}
